<resources>
    <string name="app_name">Planifiable</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="logo_de_la_aplicacion">logo de la aplicacion</string>
    <string name="registro">Registro</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta_inicia_sesion">¿Ya tienes una cuenta? Inicia sesion</string>
    <string name="estudia_mejor_no_mas">Estudia mejor, no mas</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendario">Calendario</string>
    <string name="home">Home</string>
    <string name="tareas">Tareas</string>
    <string name="examenes">Examenes</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>
    <string name="convierte_tus_fechas_de_examen_en_un_plan_de_estudio_organizado">Convierte tus fechas de examen en un plan de estudio organizado.</string>
    <string name="idioma">Idioma</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="modo_oscuro_claro">Modo Oscuro / Claro</string>
    <string name="pr_ximas_tareas">Próximas tareas</string>
    <string name="hoy">Hoy:</string>
    <string name="esta_semana">Esta semana:</string>
    <string name="prioridad">Prioridad</string>
    <string name="dificultad">Dificultad</string>
    <string name="asignatura">Asignatura</string>
    <string name="fecha">Fecha</string>
    <string name="dospuntos">:\u00A0</string>
    <string name="proximos_examenes">Proximos examenes</string>
    <string name="hola_usuario_este_es_el_plan_del_d_a_a_por_ello">Hola Usuario, este es el plan del día ¡A por ello!</string>
    <string name="tareas_de_hoy">Tareas de hoy:</string>
    <string name="estudiar_hoy">Estudiar hoy:</string>
    <string name="estudio">📘 Estudio</string>
    <string name="ocupado">⛔ Ocupado</string>
    <string name="ex_menes">📝 Exámenes</string>
    <string name="tareas_calendar">📌 Tareas</string>
    <string name="a_adir_horas_ocupadas">Añadir horas ocupadas</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="enviar">Enviar</string>
    <string name="integrantes">Integrantes</string>
    <string name="abandonar_chat">Abandonar chat</string>
    <string name="crear_grupo">Crear grupo</string>
    <string name="unirse_a_grupo">Unirse a grupo</string>
    <string name="usuario">Usuario</string>
    <string name="cambiar_nombre_de_usuario">Cambiar nombre de usuario</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>
    <string name="horas_estimadas">Horas estimadas</string>
    <string name="t_tulo">Título</string>
    <string name="horas">Horas</string>
    <string name="group_name">Nombre del grupo</string>
    <string name="crear">Crear</string>
    <string name="escribe_un_nombre">Escribe un nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="codigo_del_grupo">Código del grupo</string>
    <string name="unirse">Unirse</string>
    <string name="escribe_el_codigo">Escribe el código</string>
    <string name="alta">ALTA</string>
    <string name="media">MEDIA</string>
    <string name="baja">BAJA</string>
    <string name="dificil">DIFICIL</string>
    <string name="facil">FACIL</string>
    <string name="nuevo_examen">Nuevo examen</string>
    <string name="nueva_tarea">Nueva tarea</string>
    <string name="mover">Mover</string>
    <string name="borrar">Borrar</string>
    <string name="Seguro_que_quieres_borrar_este_elemento">¿Seguro que desea borrar este elemento?</string>
    <string name="confirmar_borrado">Confirmar borrado</string>
    <string name="hola">Hola ,</string>
    <string name="este_es_el_plan_del_día_a_por_ello">, este es el plan del día, a por ello</string>
    <string name="grupo_creado">Grupo creado</string>
    <string name="codigo_para_unirse">Codigo para unirse</string>
    <string name="ok">Ok</string>
    <string name="error_al_crear_grupo">Error al crear el grupo</string>
    <string name="te_has_unido">Te has unido al grupo</string>
    <string name="codigo_incorrecto">Código incorrecto o ya eres miembro</string>
    <string name="nuevo_username">Nuevo nombre de usuario</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="contraseña_actual">Contraseña actual</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="complete_todos_campos">Complete todos los campos</string>
    <string name="contraseñas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="seguro_borrar_cuenta">¿Seguro que quieres borrar tu cuenta? Esta acción no se puede deshacer.</string>
    <string name="invalid_hours">Horas estimadas invalidas</string>

</resources>