<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>


    <item
        android:id="@+id/nav_cal"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_cal"
        android:title="@string/calendario"
        android:visible="true"
        app:showAsAction="withText" />

    <item
        android:id="@+id/nav_tareas"
        android:icon="@drawable/ic_tareas"
        android:title="@string/tareas"/>

    <item
        android:id="@+id/nav_examen"
        android:icon="@drawable/ic_examen"
        android:title="@string/examenes"/>

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>

</menu>