<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Asignatura -->
    <EditText
        android:id="@+id/etAsignatura"
        android:hint="@string/asignatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Fecha -->
    <EditText
        android:id="@+id/etFecha"
        android:hint="@string/fecha"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <!-- Prioridad -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prioridad"/>

        <Spinner
            android:id="@+id/spPrioridad"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Dificultad -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dificultad"/>

        <Spinner
            android:id="@+id/spDificultad"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>