<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- SALUDO -->
            <TextView
                android:id="@+id/tvSaludo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hola_usuario_este_es_el_plan_del_d_a_a_por_ello" />

            <!-- TAREAS -->
            <TextView
                android:text="@string/tareas_de_hoy"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/layoutTareasHoy"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"/>

            <!-- ESTUDIO -->
            <TextView
                android:text="@string/estudiar_hoy"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/layoutEstudioHoy"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>